...
    <string name="activity_user_information_default_name">Your Name</string>
    <string name="activity_user_information_default_statement">Your Personal Statement</string>
    <string name="activity_user_information_default_age">0</string>
    <string name="activity_user_information_default_height">0 cm</string>
    <string name="activity_user_information_default_weight">0 kg</string>
    <string name="activity_user_information_default_athlete_type">Athlete</string>
    <string name="activity_user_information_default_user_image">Run</string>
    <!--These strings are for testing-->
    <string name="user_information_test_first_name">Auston</string>
    <string name="user_information_test_last_name">Matthews</string>
    <string name="user_information_test_age">20</string>
    <string name="user_information_test_height">191</string>
    <string name="user_information_test_height_cm">191 cm</string>
...
